markdown notes remove

--- a/Markdown/index.html
+++ b/Markdown/index.html
@@ -30,6 +30,8 @@
             <div class="toolbar">
                 <!-- 新的工具栏添加在这里！ -->
                 <input type="text" v-model="selectedNote.title" placeholder="Note title">
+                <button @click="favoriteNote" title="Favorite note"><i class="material-icons">{{ selectedNote.favorite ? 'star' : 'star_border'}}</i></button>
+                <button @click="removeNote" title="Remove note"><i class="material-icons">delete</i></button>
             </div>
             <textarea v-model="selectedNote.content"></textarea>
         </section>
