--- a/Markdown/index.html
+++ b/Markdown/index.html
@@ -41,6 +41,18 @@
                 <span class="label">Created</span>
                 <span class="value">{{ selectedNote.created | date }}</span>
               </span>
+              <span class="lines">
+                <span class="label">Lines</span>
+                <span class="value">{{ linesCount }}</span>
+              </span>
+              <span class="words">
+                <span class="label">Words</span>
+                <span class="value">{{ wordsCount }}</span>
+              </span>
+              <span class="characters">
+                <span class="label">Characters</span>
+                <span class="value">{{ charactersCount }}</span>
+              </span>
             </div>
         </section>
     
