--- a/CardGame/index.html
+++ b/CardGame/index.html
@@ -6,6 +6,7 @@
   <!-- Icons & Stylesheets -->
   <link href="https://fonts.googleapis.com/css?family=Signika+Negative:600" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="transition.css"/>
 </head>
 <body>
   <!-- Include the library in the page -->
