--- a/CardGame/index.html
+++ b/CardGame/index.html
@@ -11,7 +11,7 @@
 <body>
   <!-- Include the library in the page -->
   <script src="https://unpkg.com/vue/dist/vue.js"></script>
-  <!-- This library will be useful for animations -->
+  <!-- This library will be useful for animations 动画处理-->
   <script src="https://unpkg.com/tween.js"></script>
 
   <!-- Game app -->
@@ -23,7 +23,7 @@
       <path :d="`m 0,0 20,0 0,${height} -10,-10 -10,10 z`" :style="`fill:${color};stroke:none;`" />
     </svg>    
   </script>
-  
+
   <!-- Scripts -->
   <script src="utils.js"></script>
   <script src="cards.js"></script>
